[package]
name = "snarkify-scroll-proving-sdk"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
ethers-signers  = { git = "https://github.com/scroll-tech/ethers-rs.git", branch = "v2.0.7" }
halo2curves = { git = "https://github.com/scroll-tech/halo2curves", branch = "v0.1.0" }
[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "v1.1"  }
[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "main" }
[patch."https://github.com/privacy-scaling-explorations/bls12_381"]
bls12_381 = { git = "https://github.com/scroll-tech/bls12_381", branch = "feat/impl_scalar_field" }


[dependencies]
scroll-proving-sdk = { git = "https://github.com/scroll-tech/scroll-proving-sdk", rev = "45f2ce6083f373ba1d269ead20693332d8f1eb7f" }
chrono = { version = "0.4.26", features = ["serde"] }